--- a/style.css
+++ b/style.css
@@ -1431,6 +1431,7 @@ button {
                font-size: 20px;
                font-weight: 500;
                text-align:center;
+               padding-bottom: 10%;
            }  
            
            .history{
