--- a/style.css
+++ b/style.css
@@ -358,7 +358,7 @@ button {
     }
              
     .mainPhotoSecondDiv{
-        /* margin: 50px; */
+        padding-top: 20%;
        position: relative;
        top: 0%;
         text-align: center;
@@ -379,7 +379,7 @@ button {
         white-space: nowrap;
         font-weight: 500;
         position:absolute; 
-        top:50%; 
+        top:60%; 
         left:3%;
     }
     
@@ -390,7 +390,7 @@ button {
         font-weight: 500;
         position:absolute;  
         text-align:center;
-        top:60%;
+        top:70%;
         left:10%;
         
     }
